--- a/package.json
+++ b/package.json
@@ -26,9 +26,15 @@
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "^2.1.3",
     "angularfire2": "^5.0.0-rc.6",
+    "cordova-ios": "4.5.4",
+    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-ionic-webview": "^1.1.16",
+    "cordova-plugin-splashscreen": "^4.0.3",
+    "cordova-plugin-whitelist": "^1.3.1",
     "cordova-sqlite-storage": "^2.2.1",
     "firebase": "^4.11.0",
     "ionic-angular": "3.9.2",
+    "ionic-plugin-keyboard": "^2.2.1",
     "ionicons": "3.0.0",
     "promise-polyfill": "^7.1.0",
     "rxjs": "5.5.2",
@@ -42,7 +48,15 @@
   "description": "An Ionic project",
   "cordova": {
     "plugins": {
-      "cordova-sqlite-storage": {}
-    }
+      "cordova-sqlite-storage": {},
+      "ionic-plugin-keyboard": {},
+      "cordova-plugin-whitelist": {},
+      "cordova-plugin-device": {},
+      "cordova-plugin-splashscreen": {},
+      "cordova-plugin-ionic-webview": {}
+    },
+    "platforms": [
+      "ios"
+    ]
   }
 }
