--- a/package.json
+++ b/package.json
@@ -26,12 +26,13 @@
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "^2.1.3",
     "angularfire2": "^5.0.0-rc.6",
+    "cordova-android": "7.0.0",
     "cordova-ios": "4.5.4",
-    "cordova-plugin-device": "^1.1.4",
+    "cordova-plugin-device": "^1.1.7",
     "cordova-plugin-ionic-webview": "^1.1.16",
-    "cordova-plugin-splashscreen": "^4.0.3",
-    "cordova-plugin-whitelist": "^1.3.1",
-    "cordova-sqlite-storage": "^2.2.1",
+    "cordova-plugin-splashscreen": "^4.1.0",
+    "cordova-plugin-whitelist": "^1.3.3",
+    "cordova-sqlite-storage": "^2.3.0",
     "firebase": "^4.11.0",
     "ionic-angular": "3.9.2",
     "ionic-plugin-keyboard": "^2.2.1",
@@ -56,7 +57,8 @@
       "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
-      "ios"
+      "ios",
+      "android"
     ]
   }
 }
