--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ionic/pro": "1.0.16",
     "@ionic/storage": "^2.1.3",
     "angularfire2": "^5.0.0-rc.6",
+    "cordova-android": "7.0.0",
     "cordova-ios": "4.5.4",
     "cordova-plugin-device": "^1.1.4",
     "cordova-plugin-ionic-webview": "^1.1.16",
@@ -56,6 +57,7 @@
       "cordova-plugin-ionic-webview": {}
     },
     "platforms": [
+      "android",
       "ios"
     ]
   }
